syntax = "proto3";
option go_package = "./;pb";

import "google/api/annotations.proto";
import "user.proto";

// 用户服务接口
service UserService {
  // 注册
  rpc UserRegister(UserRegisterRequest) returns (UserRegisterResponse){
    option (google.api.http) = {
      post: "/api/v1/user/register"
      body: "*"
    };
  };
  // 登录-账号密码
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse){
    option (google.api.http) = {
      post: "/api/v1/user/login"
      body: "*"
    };
  };
  // 登录-验证码
  rpc UserLoginBySmsCode(UserLoginBySmsCodeRequest) returns (UserLoginResponse){
    option (google.api.http) = {
      post: "/api/v1/user/login_sms"
      body: "*"
    };
  };
  // 重置密码
  rpc ResetUserPassword(ResetUserPasswordRequest) returns (ResetUserPasswordResponse){
    option (google.api.http) = {
      post: "/api/v1/user/reset_password"
      body: "*"
    };
  };
  // 查询用户信息
  rpc GetUserInfoByUid(GetUserInfoRequest) returns (GetUserInfoResponse){
    option (google.api.http) = {
      get: "/api/v1/user/profile"
    };
  };
}

// 注册
message UserRegisterRequest {
  string mobile = 1;
  string password = 2;
  string re_password = 3;

  string nickname = 4;
  string email = 5;
  int32 gender = 6;
  int32 role = 7;
}
message UserRegisterResponse {
  int64 uid = 1;
  string message = 2;
}
// 登录-账号密码
message UserLoginRequest {
  string mobile = 1;
  string password = 2;
}
// 登录-验证码
message UserLoginBySmsCodeRequest {
  string mobile = 1;
}
message UserLoginResponse {
  int64 uid = 1;
  string mobile = 2;
  string nick_name = 3;
  string email = 4;
  int32 gender = 6;
  int32 role = 7;
  string avatar_url = 8;
}

// 用户做题统计信息
message UserProblemStatistics{
  int64 uid = 1;
  int64 submit_count = 2;
  int64 accomplish_count = 3;
  int64 easy_problem_count = 4;
  int64 medium_problem_count = 5;
  int64 hard_problem_count = 6;
}

// 重置密码
message ResetUserPasswordRequest {
  string mobile = 1;
  string password = 2;
}
message ResetUserPasswordResponse {
  string message = 1;
}

// 查询用户信息
message GetUserInfoRequest {
  int64 uid = 1;
  string mobile = 2;
}
message GetUserInfoResponse {
  UserInfo data = 1;
}
